Aula Best Minds Apex/Aula Best Minds APEX/force-app/main/default/objects/Escola__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <label>Cidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>