Aula Best Minds Apex/Aula Best Minds APEX/force-app/main/default/objects/Escola__c/fields/HoraFechamento__c.field-meta.xml
<CustomField>
    <fullName>HoraFechamento__c</fullName>
    <label>Hora de Fechamento</label>
    <type>Time</type>
</CustomField>