Aula Best Minds Apex/Aula Best Minds APEX/force-app/main/default/objects/Escola__c/fields/HorarioAbertura__c.field-meta.xml
<CustomField>
    <fullName>HorarioAbertura__c</fullName>
    <label>Horário de Abertura</label>
    <type>Time</type>
</CustomField>