Aula Best Minds Apex/Aula Best Minds APEX/force-app/main/default/objects/Escola__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <label>Numero</label>
    <length>30</length>
    <type>Text</type>
</CustomField>