Aula Best Minds Apex/Aula Best Minds APEX/force-app/main/default/objects/Escola__c/fields/Tamanho__c.field-meta.xml
<CustomField>
    <fullName>Tamanho__c</fullName>
    <label>Tamanho</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pequena</fullName>
            </value>
            <value>
                <fullName>Média</fullName>
            </value>
            <value>
                <fullName>Grande</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>